--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
         </activity>
         <activity
             android:name=".GraphActivity"
-            android:label="@string/title_activity_graph" >
+            android:label="Motion" >
         </activity>
     </application>
 
