--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name" >
         <activity
             android:name=".motion"
@@ -39,6 +39,10 @@
         </activity>
         <activity
             android:name=".GraphActivity"
+            android:label="Motion" >
+        </activity>
+        <activity
+            android:name=".AboutProject"
             android:label="Motion" >
         </activity>
     </application>
